removed hidden naming prefix, added source selection

--- a/monitor/htdocs/asapmon.css
+++ b/monitor/htdocs/asapmon.css
@@ -23,12 +23,26 @@ input.plot {
     border-left-color: gray;
 }
 
+abbr, acronym {
+    text-decoration: none;
+    border: 0;
+    cursor: help;
+}
+
+#sourcelist,#filelist {
+    vertical-align: top;
+}
+
+tr,td {
+    padding:0;
+}
+
 legend {
         color: white;
         border: solid #8F8FB3;
         border-width: 1px;
         padding: 0.3em;
-        margin-bottom: 0.2em;
+        margin-bottom: 0.5em;
         background-color: #ADADD9;
         font-weight: bold;
         letter-spacing: 0.2em;
@@ -36,28 +50,40 @@ legend {
 }
 
 fieldset {
-
-        border: 1px solid;
-        border-top-width: 2px;
-        border-color: rgb(230,230,230);
-        border-top-color: #ABB8C7;
-        padding: 0 0 1em 1em;
-        background-color: #F4F4F4;
-        width: auto;
-        margin-right: 0.5em;
+    border: 0px solid;
+    border-top-width: 2px;
+    border-color: rgb(230,230,230);
+    border-top-color: #ABB8C7;
+    padding: 0.2em 0 0.5em 0.5em;
+    background-color: #F4F4F4;
+    width: auto;
+    margin-right: 0.5em;
 }
 
 fieldset.velocity {
-   height: 45px;
+   //height: 45px;
+}
+
+.floatleft {
+  height: 22px;
+  float:left;
+}
+
+
+.labeled {
+    padding-left:0.5em;
+    padding-right:0.5em;
+    margin-left: 2px;
+    margin-right: 2px;
+    border: solid 1px #a4a4a4;
 }
 
 #plotrange {
-width:250px;
-
+    //width:250px;
 }
 
-#rangeunit {
-//float:left;
+#prangeunit,#brangeunit {
+    color: #888888;
 }
 
 #velunit {
